--- a/automotive/src/main/res/layout/automotive_activity_settings.xml
+++ b/automotive/src/main/res/layout/automotive_activity_settings.xml
@@ -51,6 +51,36 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="30dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:textSize="20sp"
+                    android:text="@string/source_semicolon"/>
+
+                <RadioGroup
+                    android:id="@+id/sources_radio_group_car"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="15dp"
+                android:alpha="0.5"
+                android:background="@color/or_color_text" />
+
             <CheckBox
                 android:id="@+id/automotive_settings_enable_last_known_radio_station_check_view"
                 android:layout_width="match_parent"
