--- a/common-ui/src/main/res/layout/dialog_about.xml
+++ b/common-ui/src/main/res/layout/dialog_about.xml
@@ -31,7 +31,8 @@
             android:layout_marginBottom="15dp"
             android:gravity="center"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:text="@string/app_name"/>
 
         <LinearLayout style="@style/about_item_layout">
 
