--- a/common-ui/src/main/res/layout/dialog_about.xml
+++ b/common-ui/src/main/res/layout/dialog_about.xml
@@ -165,15 +165,18 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginBottom="15dp"
-            android:background="@color/or_color_white" />
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="25dp"
+            android:background="@color/or_color_blue_light" />
 
         <TextView
             style="@style/about_item_label"
             android:layout_width="match_parent"
             android:layout_marginBottom="15dp"
             android:gravity="center"
-            android:text="@string/support_ivan_text" />
+            android:text="@string/support_ivan_text"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -191,6 +194,7 @@
                 android:src="@drawable/ivan_fb" />
 
             <ImageView
+                android:id="@+id/about_item_ivan_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ivan_logo" />
@@ -206,10 +210,17 @@
 
         <ImageView
             android:id="@+id/about_item_gofundme_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="180dp"
+            android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/gofundme_logo" />
+
+        <View
+            android:layout_width="180dp"
+            android:layout_height="1dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="15dp"
+            android:background="@color/or_color_blue_light" />
 
     </LinearLayout>
 
