Display version code in the About section

--- a/common-ui/src/main/res/layout/dialog_about.xml
+++ b/common-ui/src/main/res/layout/dialog_about.xml
@@ -26,13 +26,21 @@
 
         <TextView
             android:id="@+id/dialog_about_title_view"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
             android:gravity="center"
             android:text="@string/app_name"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"/>
+
+        <TextView
+            android:id="@+id/dialog_about_version_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal"/>
 
         <LinearLayout style="@style/about_item_layout">
 
