--- a/automotive/src/main/res/layout/automotive_activity_settings.xml
+++ b/automotive/src/main/res/layout/automotive_activity_settings.xml
@@ -350,6 +350,36 @@
                 android:alpha="0.5"
                 android:background="@color/or_color_text" />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <Button
+                    android:id="@+id/automotive_logs_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:textSize="24sp"
+                    android:text="@string/send_logs_lbl" />
+
+                <ProgressBar
+                    android:id="@+id/automotive_logs_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:visibility="gone"/>
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="15dp"
+                android:alpha="0.5"
+                android:background="@color/or_color_text" />
+
         </LinearLayout>
 
     </ScrollView>
