--- a/common-ui/src/main/res/layout/dialog_general_settings.xml
+++ b/common-ui/src/main/res/layout/dialog_general_settings.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
     Copyright 2020 The "Open Radio" Project. Author: Chernyshov Yuriy
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -72,17 +73,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginBottom="15dp"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginEnd="15dp"
                 android:text="@string/default_country_label"
-                android:textSize="20sp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="20sp" />
 
             <Spinner
                 android:id="@+id/default_country_spinner"
@@ -152,6 +153,34 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:max="100" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="15dp"
+            android:alpha="0.5"
+            android:background="@color/or_color_text" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ProgressBar
+                android:id="@+id/send_logs_progress_view"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/send_logs_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/send_logs_lbl" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
