--- a/automotive/src/main/res/layout/automotive_activity_settings.xml
+++ b/automotive/src/main/res/layout/automotive_activity_settings.xml
@@ -287,7 +287,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
-                android:text="@string/google_drive"
+                android:text="@string/storage"
                 android:textSize="24sp" />
 
             <LinearLayout
