--- a/tv/src/main/res/layout/tv_main.xml
+++ b/tv/src/main/res/layout/tv_main.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-    Copyright 2020 The "Open Radio" Project. Author: Chernyshov Yuriy
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+    Copyright 2020, 2023 The "Open Radio" Project. Author: Chernyshov Yuriy
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -24,15 +25,26 @@
         layout="@layout/tv_current_radio_station_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
         android:layout_toStartOf="@id/tv_settings_btn"
         android:visibility="gone" />
+
+    <View
+        android:layout_below="@id/tv_current_radio_station_view"
+        android:layout_marginStart="10dp"
+        android:layout_alignRight="@id/tv_current_radio_station_view"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="@android:color/white"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tv_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tv_current_radio_station_view"
+        android:paddingTop="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
@@ -82,7 +94,7 @@
         android:src="@drawable/tv_add_btn_bg" />
 
     <ProgressBar
-        android:id="@+id/progress_bar_tv_view"
+        android:id="@+id/progress_tv_view"
         style="@android:style/Widget.ProgressBar.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
