--- a/common/src/main/res/values/ic_launcher_background.xml
+++ b/common/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#4F5D73</color>
+    <color name="ic_launcher_background">#53676C</color>
 </resources>
